--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,17 @@
 {
   "name": "client",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "packageManager": "yarn@4.7.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "jotai": "^2.12.0",
+    "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
