--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,17 @@
 {
   "name": "server",
-  "packageManager": "yarn@3.6.3",
+  "packageManager": "yarn@4.7.0",
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js"
   },
+  "dependencies": {
+    "express": "^4.21.2"
+  },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
-    "express": "^4.21.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
