--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,23 @@
   "type": "module",
   "packageManager": "yarn@4.7.0",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
+    "dev": "vite",
+    "dev:host": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "antd": "^5.24.6",
+    "axios": "^1.8.4",
+    "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -25,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "sass": "^1.86.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
