--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+data
 node_modules
 dist
 dist-ssr
 *.local
 .yarn
-
+.env
+.env.development
+.env.local
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
